# OpenEnv-Hackathon

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_header.tmp  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/tasks/: control.json  medium.json
graders/: graders.py  task_graders.py
med_reconciliation/: __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
med_reconciliation/data/: drug_interactions.json
med_reconciliation/data/tasks/: easy.json  hard.json
med_reconciliation/graders/: __init__.py  graders.py
med_reconciliation/server/: Dockerfile  app.py  environment.py
med_reconciliation/tests/: __init__.py  test_environment.py
my_first_env/: README.md  models.py
my_first_env/server/: app.py  my_first_env_environment.py
scripts/: validate-submission.sh
server/: Dockerfile  __init__.py  app.py  environment.py
tests/: test_environment.py  test_graders.py
